@@ -1,21 +1,14 @@
 {
-  "timestamp" : "2022-05-25T08:15:38Z",
-  "count_outdated" : 293,
-  "uniques_outdated" : 152,
+  "timestamp" : "2022-05-26T01:02:50Z",
+  "count_outdated" : 295,
+  "uniques_outdated" : 153,
   "count" : 327,
   "uniques" : 175,
   "clones" : [
     {
-      "timestamp": "2022-05-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-05-12T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
+      "count": 2,
+      "count_minmax": [ 2, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
