@@ -1,15 +1,10 @@
 {
-  "count": 34,
+  "count": 32,
   "uniques": 12,
   "clones": [
     {
-      "timestamp": "2022-05-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-05-12T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
