@@ -1,3 +1,10 @@
+2022-05-26T01:02:50Z:
+* notice: last 14d: unq all: 12 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 152 293 / 175 327
+* notice: next accum: outdated-unq outdated-all / unq all: 153 295 / 175 327
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +0 +0 -0 -1 / 1 2
+* notice: changed dates: [2022-05-12]
+
 2022-05-25T08:15:38Z:
 * notice: last 14d: unq all: 12 34
 * notice: prev accum: outdated-unq outdated-all / unq all: 152 293 / 175 328
